<resources>
    <string name="app_name">Petagram</string>
    <string name="text_nombre">Nombre</string>
    <string name="txt_form_nombre">Nombre</string>
    <string name="txt_form_email">Email</string>
    <string name="txt_form_mensaje">Mensaje</string>
    <string name="txt_form_inicio">Formulario de contacto</string>
    <string name="txtBotonContacto">Enviar Comentario</string>
    <string name="text_about">Acerca De</string>
    <string name="text_notify">Recibir Notificacion</string>
    <string name="text_config">Configurar Cuenta</string>
    <string name="text_contact">Contacto</string>
    <string name="descrip_ivperfil">Foto de Perfil</string>
    <string name="descrip_ivraitear">Icono me gusta</string>
    <string name="descrip_ivraiting">Icono Raiting</string>
    <string name="txt_like">Me gusta</string>
    <string name="action_favorite">Fav</string>
    <string name="name_mascota">Aron</string>
    <string name="name_dev">Hernandez, Miguel</string>
    <string name="name_dep">Development Dept.</string>
    <string name="name_country">Colombia</string>
    <string name="name_correo">mahb880@gmail.com</string>
    <string name="name_telefono">+57 30068875231</string>
    <string name="name_derechos">All Rights Reserved</string>
    <string name="name_page">http://miapp.co</string>
    <string name="config_cuenta">Escribe tu usuario</string>
    <string name="guardar_cuenta">Guardar Cuenta</string>
    <string name="name_app_insta">"@"_artattic_</string>
</resources>