<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigCuenta">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/actionbar">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:layout_below="@id/my_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:paddingTop="50sp"
            android:paddingBottom="50sp"
            android:textSize="40sp"
            android:layout_gravity="center_horizontal"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvCuentaConf"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:hint="@string/config_cuenta"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:text="@string/guardar_cuenta"
            android:layout_marginTop="50sp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</RelativeLayout>