<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/actionbar">
    </include>

    <LinearLayout
        android:id="@+id/lytOne"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:paddingLeft="16sp"
        android:paddingTop="16sp"
        android:paddingRight="16sp"
        android:paddingBottom="16sp"
        android:layout_below="@id/my_toolbar">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/txt_form_inicio"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtfNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_form_nombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtfEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_form_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtfMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_form_mensaje">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnEnviarCom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBotonContacto"
        android:background="@color/colorAccent"
        android:textColor="@color/design_default_color_on_primary"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>